--- a/VScode/settings.json
+++ b/VScode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "/usr/bin/python3",
-    "python.jediEnabled": false
+    "python.jediEnabled": false,
+    "git.autofetch": true
 }
