--- a/Software.yaml
+++ b/Software.yaml
@@ -73,6 +73,13 @@ lilypond:
       sh ~/Downloads/lilypond-2.18.2-1.linux-64.sh
 
 ##############################################################################
+nginx:
+  ubuntu:
+    # https://docs.nginx.com/nginx/admin-guide/installing-nginx/installing-nginx-open-source/#installing-a-prebuilt-package
+    apt_install:
+      - nginx
+
+##############################################################################
 nodejs:
   ubuntu:
     # https://www.digitalocean.com/community/tutorials/how-to-install-node-js-on-ubuntu-18-04
@@ -119,7 +126,7 @@ chrome:
   ubuntu:
     ppa_setup: |
       wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-      echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list
+      echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list
     apt_install:
       - google-chrome-stable
 
