Fixe the setupSoftware.py for apt_install of packages

--- a/Software.yaml
+++ b/Software.yaml
@@ -41,6 +41,11 @@ apt-transport-https:
     apt_install:
       - apt-transport-https
 
+htop:
+  ubuntu:
+    apt_install:
+      - htop
+
 ##############################################################################
 latex:
   ubuntu:
