Add pandoc to list of tools

--- a/Software.yaml
+++ b/Software.yaml
@@ -68,6 +68,12 @@ latex:
     - lyluatex
 
 ##############################################################################
+pandoc:
+  ubuntu:
+    apt_install:
+      - pandoc
+
+##############################################################################
 lilypond:
   ubuntu:
     # http://lilypond.org/unix.html
